# sz-rust-sdk

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODEGEN.md  COMMIT_MESSAGE.md  Cargo.toml  OVERVIEW.md  README.md  RUN_CODE_SNIPPETS.md  RUN_EXAMPLES.md  TEST_STANDARDS.md  build.rs  code_snippets_results.txt  commit_message.txt  complete_csharp_snippets_analysis.md  csharp_code_snippets_detailed_analysis.md  csharp_snippets_per_file_enumeration.md  csharp_unit_tests_inventory.txt  csharp_v4_code_analysis.md  csharp_v4_snippets_enumeration.md  debug_config_json.rs  debug_config_structure.rs  debug_existing_datasources.rs  debug_json_diff.rs  deny.toml  fix_test_error_handling.py  foo  quick_test_snippets.sh  run_all_code_snippets.sh  run_all_examples.sh  run_all_examples_verbose.sh  senzing_csharp_detailed_test_analysis.md  senzing_csharp_test_analysis.md
.cargo/: config.toml
.claude/: CLAUDE.md  faq_server.py
.github/: PAGES_SETUP.md  dependabot.yml
code-snippets/: Cargo.toml  README.md
code-snippets-old/rust/snippets/redo/redo_continuous/: Cargo.toml
code-snippets/configuration/: init_default_config.rs  register_data_sources.rs
code-snippets/deleting/: delete_records.rs  delete_via_loop.rs
code-snippets/error_handling/: error_inspection.rs  retry_with_backoff.rs
code-snippets/information/: database_demo.rs  get_license.rs  get_version.rs
code-snippets/initialization/: engine_priming.rs  environment_and_hubs.rs  lifecycle_patterns.rs  purge_repository.rs
code-snippets/loading/: load_records.rs  load_via_loop.rs  load_via_loop_threadpool.rs
code-snippets/redo/: load_with_redo_via_loop.rs  redo_continuous.rs  redo_continuous_via_futures.rs  redo_with_info_continuous.rs
code-snippets/rust/snippets/configuration/: README.md
code-snippets/rust/snippets/configuration/init_default_config/: Cargo.toml
code-snippets/rust/snippets/configuration/register_data_sources/: Cargo.toml
code-snippets/rust/snippets/configuration/register_data_sources/src/: main.rs
code-snippets/rust/snippets/deleting/delete_records/: Cargo.toml
code-snippets/rust/snippets/deleting/delete_records/src/: main.rs
code-snippets/rust/snippets/information/database_demo/: Cargo.toml
code-snippets/rust/snippets/information/database_demo/src/: main.rs
code-snippets/rust/snippets/information/get_license/: Cargo.toml
code-snippets/rust/snippets/information/get_license/src/: main.rs
code-snippets/rust/snippets/information/get_version/src/: main.rs
code-snippets/rust/snippets/initialization/: README.md
code-snippets/rust/snippets/initialization/engine_priming/src/: main.rs
code-snippets/rust/snippets/initialization/environment_and_hubs/: Cargo.toml
code-snippets/rust/snippets/initialization/environment_and_hubs/src/: main.rs
code-snippets/rust/snippets/initialization/purge_repository/: Cargo.toml
code-snippets/rust/snippets/initialization/purge_repository/src/: main.rs
code-snippets/rust/snippets/loading/load_records/src/: main.rs
code-snippets/rust/snippets/loading/load_via_loop/src/: main.rs
code-snippets/rust/snippets/redo/load_with_redo_via_loop/: Cargo.toml
code-snippets/rust/snippets/redo/load_with_redo_via_loop/src/: main.rs
code-snippets/rust/snippets/redo/redo_continuous/src/: main.rs
code-snippets/rust/snippets/redo/redo_continuous_via_futures/: Cargo.toml
code-snippets/rust/snippets/redo/redo_continuous_via_futures/src/: main.rs
code-snippets/rust/snippets/searching/search_records/src/: main.rs
code-snippets/rust/snippets/stewardship/force_resolve/: Cargo.toml
code-snippets/rust/snippets/stewardship/force_unresolve/: Cargo.toml
code-snippets/rust/snippets/stewardship/force_unresolve/src/: main.rs
code-snippets/searching/: search_records.rs  search_threadpool.rs  why_search.rs
code-snippets/stewardship/: force_resolve.rs  force_unresolve.rs
examples/: README.md  basic_usage.rs  complete_workflow.rs  database_demo.rs  debug_config_json.rs  debug_settings.rs  engine_operations.rs  minimal_test.rs  quick_datasource_test.rs  simple_demo.rs  simple_usage.rs  simple_working_demo.rs  successful_demo.rs  test_config_setup.rs  test_config_via_trait.rs  test_error_messages.rs  test_get_existing_instance.rs  test_senz7220.rs  test_singleton.rs  verbose_debug.rs  working_demo.rs
scripts/: generate_bindings.rs  generate_error_mappings.rs
src/: error.rs  flags.rs  helpers.rs  (+5 more)
(+83 files in other folders)
