[package]
name = "redo_continuous"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
sz-rust-sdk = { path = "../../../../.." }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
ctrlc = "3.4"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }